--- a/Projeto_java/index.html
+++ b/Projeto_java/index.html
@@ -17,7 +17,7 @@
 
         <button id="button" class="button-action" onclick="generatePassword()">Gerar senha</button>
     </main>
-    <div id="container-password"  class="container-password hide" >
+    <div id="container-password" onclick="copyPassord()" class="container-password hide" >
         <span class="title-senha">Sua senha gerada foi:</span>
         <span id="password" class="password"></span>
         <span class="tooltip">Clique na senha e copie. 👆 </span>
